# J-UBIK

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTION.md  GM_demo.ipynb  LICENSE  MF_playground.ipynb  MF_playground_cleaned.ipynb  README.md  approx_psf.py  area_check.py  check_data_model.py  config.yaml  config_mf.yaml  config_mf_trans.cfg  demo_erosita_psf.py  energy_test.py  fit_jax.py  fit_mf.py  fit_mf2.py  fit_mf_trans.py  fit_sf.py  fitdata.py  get_data.py  get_datamaxpos.py  get_synthps.py  getpsf_trainset.py  integration_testing.py  log.md  mf_plot.py  mfplot_demo.py  mpi.py  playground.py  plot_mf.py  plot_psfset.py  plot_sn1006.py  plotting.py  psf_check.py  psf_generator.py  psf_likelihood.py  (+9 more)
4096/: README.md  fit_jax.py  sim_psf.py  svpsf.py  test_inverse_gamma.py
analysis/: fit_sf.py  playground.py
config/: config.yaml  config_IG.yaml  config_mf.yaml  config_mf_trans.cfg
demos/: JWST_config.yaml  alignment_code.py  alignment_getter.py  chandra_cfg.yaml  chandra_config.yaml  chandra_demo.py  chandra_get_data.py  chandra_likelihood_demo.py  config.yaml  cygnusa_2ghz.cfg  debugging.py  demo_chandra.py  eROSITA_config.yaml  eROSITA_config_2.yaml  eROSITA_config_mg.yaml  eROSITA_config_mw.yaml  eROSITA_evaluation.py  eROSITA_evaluation_config.yaml  eROSITA_inference.py  eROSITA_results.py  eROSITA_sky.py  erosita_demo.py  erosita_evaluation.py  erosita_inference.py  erosita_mock_inference.py  erosita_priors.py  erosita_psf_inference.py  erosita_results.py  erosita_sf_inference.py  get_data.py  get_inv_gamma_priors.py  getting_started.py  grids.py  imaging_resolve.py  imaging_resolve_jax.py  jwst_config.yaml  jwst_demo.py  jwst_demo_2.py  jwst_extract.py  jwst_extract_new.py  (+22 more)
demos/configs/: chandra_demo.yaml  cygnusa_2ghz.cfg  eROSITA_config.yaml  eROSITA_demo.yaml  jwst_demo.yaml  jwst_demo_config.yaml  mock_config.yaml  spt0418.yaml
demos/demos_psfs/: demo_erosita_conv_op.py  demo_erosita_coonv_op.py  demo_erosita_psf.py  erosita_lin_psfs.py  plot_psfs_plus_lin.py  test_psfs.py
demos/jwst_handling/: data_model.py  jwst_data_model_handler.py  likelihood.py  masking.py  mock_data.py  mock_plotting.py  reconstruction_grid.py  sky_grid.py
demos/matteo_demos/: eROSITA_config.yaml  eROSITA_inference.py  eROSITA_results.py  eROSITA_sky.py
demos/paper/: chandra_demo_1.yaml  chandra_demo_2.yaml  eROSITA_demo.yaml  erosita_data_plotting_config.yaml  get_hyperparameters.py  joss_paper_plotting.py  plot_Chandra_data_from_cube.py  plot_cut_flux_analysis.py  plot_eROSITA_data.py  plot_eROSITA_exposure.py  plot_eROSITA_image.py  plot_eROSITA_rec.py  plot_erosita_priors.py  plot_gt_vs_rec_2d_hist.py  plot_nwr.py  plot_uwr.py  prior_config.yaml  save_to_hdf5.py  visualize_mock_data.py  visualize_mock_rec.py  visualize_mock_sky.py
df_rec_1024_mf_geo/pickle/: nifty_random_state_last
df_rec_1024_mf_mgvi/pickle/: nifty_random_state_last
df_rec_1024_uninferred/pickle/: nifty_random_state_last
docs/: generate.sh
docs/source/: conf.py  index.rst
jubik/: __init__.py  minimization_parser.py  response.py  sugar_plot.py  utils.py  version.py
jubik/instruments/: __init__.py
lib/: InterpolationWeights.py  PaddingOperators.py  PatchingOperator.py  comp_psf_stat.py  get_data.py  get_psfs.py  getpsf_trainset.py  mpi.py  observation.py  output.py  plot1Dpsf_stat.py  plot_psfset.py  plotting.py  psf_likelihood.py  utils.py
mf_rec_1024/: optimization.cfg
models/: mf_sky.py  sf_sky.py
obs/: build_pdf.sh  obs.csv  obs.tex  obs.yaml  obs11713.py  obs14410.py  obs3209.py  obs4289.py  obs4948.py  obs4952.py
obs/pdftable/: .~lock.obs.csv#  csv2tex.py  keys.yaml  obs.csv  obs.tex  tab.tex
paper/: paper.bib  paper.md
scripts/: config.yaml  fit_mf2.py  fit_mf_trans.py  fit_sf.py  fit_sf_IG.py  fit_synth.py  get_data.py  getpsf_trainset.py  norm_psf.py  playground.py  rec_perseus.py  report_plot.py  response_check.py
src/: __init__.py  color.py  convolve.py  data.py  diagnostics.py  fits_saver.py  frequency_deviations.py  gauss_markov.py  grid.py  hashcollector.py  likelihood.py  line_models.py  messages.py  mf_model.py  mf_model_utils.py  minimization_parser.py  multimessenger.py  observation.py  plot.py  polarization.py  response.py  scaled_excitations.py  sky_models.py  spectral_behavior.py  sugar_plot.py  utils.py  version.py
src/instruments/: __init__.py  multimessanger.py
src/jwst/: __init__.py  color.py  config_handler.py  filter_projector.py  jwst_data.py  jwst_data_model.py  jwst_model_builder.py  jwst_plotting.py  jwst_telescope_model_builder.py  mock_data.py  model_connector.py  pretrain_model.py  reconstruction_grid.py  utils.py  zero_flux_model.py
src/minimization/: minimization_from_samples.py  minimization_lenscharm.py  minimization_parser.py  point_source_minimization.py
src/operators/: bilinear_interpolation.py  convolution_operators.py  convolve_utils.py  erosita_observation.py  erosita_psf.py  jifty_convolution_operators.py  psf_interpolation.py  reverse_outer_product.py  zero_padder.py
src/parse/: color.py  grid.py  parsing_base.py
test/: config_lklhd_test.yaml  config_lklhd_test1.yaml  config_lklhd_test2.yaml  config_lklhd_test3.yaml  config_lklhd_test6.yaml  config_mf_mock.yaml  config_test_sky_model.yaml  deconv_methods.py  mf_sky_mock_rec.py  mf_test_on_data.py  mock_config.yaml  test_apply_exposure.py  test_apply_exposure_readout.py  test_build_callable_from_exposure_file.py  test_build_exposure_function.py  test_build_exposure_readout_function.py  test_chandra_observation.py  test_color.py  test_config_parser.py  test_convolve.py  test_data_loaders.py  test_diagnostics.py  test_get_data.py  test_hashcollector.py  test_jifty_bilinear.py  test_jifty_conv.py  test_likelihood.py  test_messages.py  test_mf_model.py  test_minimization_parser.py  test_mock_data.py  test_mock_data_generation.py  test_patch_conv.py  test_plot.py  test_plotting.py  test_poissonian_likelihood.py  test_sky_model.py  test_slice_patches.py  test_sugar_plot.py  test_utils.py
tests/: test_plotting.py
xubik/: README.md  setup.py
(+392 files in other folders)
