[project]
name = "jubik0"
description = "X-Ubik"
readme = "README.md"
authors = [
    {name = "Vincent Eberle", email = "veberle@mpa-garching.mpg.de"},
    {name = "Matteo Guardiani", email = "matteani@mpa-garching.mpg.de"},
    {name = "Margret Westerkamp", email = "margret@mpa-garching.mpg.de"},
]
requires-python = ">=3.10"
dependencies = [
    "numpy >= 1.17.0",
    "scipy >= 1.9.0",
    "nifty8 >= 8.5.1",
    "jax",
    "jaxlib",
    "matplotlib",
    "astropy",
    "ducc0",
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "jubik0.__version__"}


[project.optional-dependencies]
doc = [
    "sphinx",
    "pydata-sphinx-theme",
    "myst-parser",
    "jupyter",
    "nbconvert",
    "jupytext",
]
test = [
    "pytest",
    "pytest-cov",
]

[build-system]
requires = [
    "setuptools >= 65.7.0",
    "numpy >= 1.23.0",
    "scipy >= 1.9.0",
    "nifty8 >= 8.5.2",
    "jax",
    "jaxlib",
    "matplotlib",
    "astropy",
    "ducc0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["jubik0", "jubik0*"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.9
target-version = "py39"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
