[project]
name = "jubik0"
description = "X-Ubik"
readme = "README.md"
authors = [
    {name = "Vincent Eberle", email = "veberle@mpa-garching.mpg.de"},
    {name = "Matteo Guardiani", email = "matteani@mpa-garching.mpg.de"},
    {name = "Margret Westerkamp", email = "margret@mpa-garching.mpg.de"},
]
requires-python = ">=3.10"
dependencies = [
    "numpy >= 1.17.0",
    "scipy >= 1.9.0",
    "nifty >= 9.0.0",
    "jax",
    "jaxlib",
    "matplotlib",
    "astropy",
    "ducc0",
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "jubik0.__version__"}


[project.optional-dependencies]
doc = [
    "sphinx<8.2",
    "sphinxcontrib-bibtex",
    "pydata-sphinx-theme",
    "myst-parser",
    "jupyter",
    "nbconvert",
    "jupytext",
]
test = [
    "pytest",
    "pytest-cov",
]

[build-system]
requires = [
    "setuptools >= 65.7.0",
    "numpy >= 1.23.0",
    "scipy >= 1.9.0",
    "nifty >= 9.0.0",
    "jax",
    "jaxlib",
    "matplotlib",
    "astropy",
    "ducc0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["jubik0", "jubik0*"]
